# internship-task

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  config.py  database.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  queries.py
api/: transactions.py  users.py
app/: main.py
app/api/: __init__.py  handlers.py
app/api/v1/: __init__.py
app/api/v1/routers/: transactions.py  users.py
app/config/: app.py  base.py  database.py  exceptions.py  lifespan.py  logging.py  middlewares.py  settings.py
app/core/: enums.py
app/models/: balance.py  base.py  transaction.py  user.py
app/repositories/: balances.py  database.py  queries.py  transactions.py  users.py
app/schemas/: balances.py  transactions.py  users.py
app/services/: __init__.py  transactions_service.py  users_service.py
app/services/service_errors/: transaction_errors.py  user_errors.py
core/: enums.py
exceptions/: common_exceptions.py  handlers.py  transaction_exceptions.py  user_exceptions.py
models/: balance.py  transaction.py  user.py
nginx/: Dockerfile  transactions_service.conf
repositories/: balances.py  transactions.py  users.py
schemas/: balances.py  transactions.py  users.py
services/: __init__.py  transactions_service.py  users_service.py
